# redesigned-guacamole

./: .ansible-lint  .ecrc  .editorconfig  .editorconfig-checker.json  .flake8  .github-actions-lint  .gitignore  .gitleaks.toml  .jscpd.json  .jsonlintrc  .lint-all-files  .markdownlint.json  .markdownlint.yml  .pre-commit-config.yaml  .prettierrc.json  .prettierrc.yml  .pylintrc  .shellcheckrc  .shfmt  .super-linter.env  .textlintrc  .yamllint  AUTOFIX_CONFIGURATION.md  AUTOFIX_IMPLEMENTATION_FIX.md  AUTOMATION_HUB_STRUCTURE.md  CI_CD_INTEGRATION_GUIDE.md  COMPLETE_CLEANUP_SUMMARY.md  CONFLUENCE_SECRETS_IMPLEMENTATION.md  CONTRIBUTING.md  CURRENT_TESTING_STATUS.md  DEVELOPMENT_STANDARDS.md  DOCUMENTATION_WORKFLOW.md  EDITORCONFIG_FIXES.md  ENHANCED_ANALYSIS_WORKFLOW_STEP.yml  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_ACTIONS_CACHE_FIX.md  HIERARCHICAL_IMPLEMENTATION_SUMMARY.md  LICENSE  LINTER_CONFIG_UPDATES.md  (+57 more)
.github/: super-linter-dynamic.env  super-linter.env
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/super-linter-intelligent/: action.yml
.github/workflows/: .ansible-lint  .markdownlint.json  .yamllint  README.md  ansible-lint.yml  ci-backup.yml  ci-optimized.yml  ci.yml  lint.yml  molecule-test.yml  notifications.yml  publish-docs.yml  quality.yml  reusable-python-setup.yml  reusable-super-linter.yml  test-secrets-handling.yml  test-workflow.yml
.lint-configs/: .shellcheckrc-ansible  .shellcheckrc-strict  README.md
ci-cd-templates/: Jenkinsfile  README.md  azure-pipelines.yml  bitbucket-pipelines.yml  github-actions-code-quality.yml  github-actions-confluence.yml  github-actions-super-linter.yml  github-actions.yml  gitlab-ci.yml  reusable-super-linter.yml  teamcity-config.txt
custom_rules/: README.md  __init__.py  test_custom_rules.py  use_package_module.py
docs/: AAP_DOCS_README.md  BRANCH_NAMING_GUIDE.md  CONFLUENCE_PUBLISHER_IMPLEMENTATION.md  ENHANCED_ANALYSIS_DEPLOYMENT_SUMMARY.md  ENHANCED_SUPER_LINTER_FINAL_SUMMARY.md  ENHANCED_SUPER_LINTER_INTEGRATION.md  ENHANCED_SUPER_LINTER_INTEGRATION_COMPLETE.md  ENHANCED_SUPER_LINTER_WORKING_SOLUTION.md  GITHUB_ACTIONS_SETUP.md  INDEX.md  LINTING_EXCLUSION_UPDATES.md  README.md  REMOTE_WORKFLOW_USAGE.md  SUPER_LINTER_ANALYSIS.md  SUPER_LINTER_CONFIGURATION_REFERENCE.md  WORKFLOW_GUIDE.md  aap_dev_lifecycle.md  aap_operations_manual.j2  aap_platform_admin_guide.j2  aap_policy_governance.j2  automation_okr_reference.md  child.md.j2  cool-test-feature.md  image-test.md  macros.j2  main.j2  main.md.j2  operator_runbook.md.j2  platform_governance.md.j2  platform_runbook.md.j2  updates.md  vars.yaml
docs/automation_hub/: automation_hub.j2  automation_hub_simple.j2  certification_paths.j2  daily_operations.j2  direct_markdown_example.md  escalation_procedures.j2  network_configuration.j2  operator_runbook.j2  platform_governance.j2  platform_runbook.j2  security_operations.j2  server_management.j2  training_enablement.j2  training_resources.j2  troubleshooting_guide.j2
docs/automation_hub/infrastructure_management/: infrastructure_management.j2  network_troubleshooting_quick_ref.md  server_provisioning.j2
docs/ci-cd/: AUTOFIX_FEATURE_GUIDE.md  CI_CD_INTEGRATION_GUIDE.md  GITHUB_ACTIONS_ASSESSMENT.md  GITHUB_ACTIONS_LINTING.md  GITHUB_ACTIONS_SUMMARY.md  SUPER_LINTER_AUTODETECTION_FIX.md  SUPER_LINTER_FIX.md  SUPER_LINTER_GUIDE.md  SUPER_LINTER_IMPLEMENTATION_SUMMARY.md  WORKFLOW_CONSOLIDATION_SUMMARY.md
docs/documentation_automation/: documentation_automation.j2
docs/documentation_automation/infrastructure_management/: network_configuration.j2
docs/documentation_automation/operator_runbook/: daily_tasks.j2  escalation.j2  operator_runbook.j2  troubleshooting.j2
docs/examples/: cool-test-feature.md  image-test.md
docs/macros/: macros.j2
docs/security/: SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_TOKEN_MASKING_GUIDE.md
docs/templates/: aap_operations_manual.j2  aap_platform_admin_guide.j2  main.j2
docs/testing/: CURRENT_TESTING_STATUS.md  MOLECULE_TESTING_GUIDE.md  MOLECULE_TROUBLESHOOTING_GUIDE.md  TESTING_SETUP_GUIDE.md  VALIDATION_SCRIPTS.md  YAML_LINTING_STANDARDS.md
draft_docs/: README.md  windows_upgrade_spec.md
draft_docs/diagrams/: dev_spaces_remote_ee_flow.mmd  discouraged.mmd  exteneded_loop_ansiblenav_remoteee.mmd  inner_loop_devspace_molecule.mmd  psrp_winrm_https_flow.mmd
draft_docs/guides/: aap_engineering_handbook.md  dev_onboarding_setup.md
draft_docs/reference/: ee_specification.md  enforcement_reference.md  testing_verification_matrix.md
draft_docs/standards/: aap_dev_standards_policy.md  aap_windows_connection_standard.md
legacy/: AUTO_DOCUMENT_IMPLEMENTATION.md  AUTO_DOCUMENT_USAGE_GUIDE.md  DIRECT_MARKDOWN_SUPPORT.md  README-confluence-original.md  TEMPLATE_IMPROVEMENTS.md  setup.sh  test-url-encoding.yml  test_updates.yml
lua/: list_formatter.lua  pagebreak.lua
molecule/: README.md
molecule/default/: converge.yml  molecule.yml  verify.yml
molecule/playbook-test/: converge.yml  molecule.yml  verify.yml
molecule/syntax-check/: converge.yml  molecule.yml  verify.yml
playbooks/: 01-validate-environment.yml  02-convert-templates.yml  03-convert-html.yml  04-publish-confluence.yml  README.md  automation_hub_publishing.yml  cleanup.yml  enhanced_confluence_publishing.yml  enhanced_confluence_publishing_clean.yml  main.yml  publish_aap_docs.yml  publish_confluence.yml
playbooks/tasks/: publish_confluence_page.yml
scripts/: confluence_manager.py  confluence_publisher.py  convert_nested_templates.sh  discover_docs.py  discover_docs_enhanced.py  enhanced_linter_analysis.py  generate_sarif_summary.py  super_linter_analysis.py  sync_documentation_repos.py  test_confluence_auth.py  test_confluence_auth_example.py
templates/: autofix_summary.md  publishing_summary.j2
vars/: aap.yml  aap_example.yml  repos.yml  vars.yml.example
